2011-05-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-17.patch: New file. Replace ...
	* binutils-lto-mixed-16.patch: This. Removed.
	* README: Likewise.

2011-04-24  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-16.patch: New file. Replace ...
	* binutils-lto-mixed-15.patch: This. Removed.
	* README: Likewise.

2011-04-20  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-15.patch: New file. Replace ...
	* binutils-lto-mixed-13.patch: This. Removed.
	* README: Likewise.

2011-04-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12639-2.patch: New.
	* README: Apply it.

2011-04-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-97.patch: New file. Replace ...
	* binutils-shr-96.patch: This. Removed.
	* README: Likewise.

2011-03-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-13.patch: New file. Replace ...
	* binutils-lto-mixed-12.patch: This. Removed.
	* README: Likewise.

2011-02-26  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-12.patch: New file. Replace ...
	* binutils-lto-mixed-11.patch: This. Removed.
	* README: Likewise.

2011-02-25  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-signed-8.patch: New file. Replace ...
	* binutils-signed-7.patch: This.  Removed.
	* README: Likewise.

2011-02-23  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-11.patch: New file. Replace ...
	* binutils-lto-mixed-10.patch: This. Removed.
	* README: Likewise.

2011-02-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-10.patch: New file. Replace ...
	* binutils-lto-mixed-9.patch: This. Removed.
	* README: Likewise.

2011-01-22  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-9.patch: New file. Replace ...
	* binutils-lto-mixed-8.patch: This. Removed.
	* README: Likewise.

2011-01-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-signed-7.patch: New file. Replace ...
	* binutils-signed-6.patch: This.  Removed.
	* README: Likewise.

2011-01-14  H.J. Lu  <hjl.tools@gmail.com>
