@@ -1,3 +1,8 @@
+2011-05-15  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-lto-mixed-17.patch: Call bfd_link_repair_undef_list
+	when undefining symbols from plugin dummy.
+
 2011-05-14  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-lto-mixed-17.patch: New file. Replace ...
